K8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opentelemetry-demo-server
  labels:
    app: opentelemetry-demo-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: opentelemetry-demo-server
  template:
    metadata:
      labels:
        app: opentelemetry-demo-server
    spec:
      containers:
        - name: opentelemetry-demo-server
          image: garyhu1030/opentelemetry-demo-server:v0.3.1
          ports:
            - containerPort: 8080
              name: server
            - containerPort: 9999
              name: metrics
