K8s/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: observability-demo-tellme-app-service
  labels:
    app: observability-demo-tellme-app
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: frontend
      protocol: TCP
  selector:
    app: observability-demo-tellme-app
