K8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: learning-o11y-service
  labels:
    app: learning-o11y
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: server
      protocol: TCP
    - name: metrics
      port: 9090
      targetPort: metrics
      protocol: TCP
  selector:
    app: learning-o11y
