K8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: observability-demo
spec:
  rules:
    - host: learning-o11y.line.dev
      http:
        paths:
          - backend:
              service:
                name: observability-demo-server-service
                port:
                  number: 80
            path: /
            pathType: Prefix

    - host: learning-o11y-tellme-app.line.dev
      http:
        paths:
          - backend:
              service:
                name: observability-demo-tellme-app-service
                port:
                  number: 80
            path: /
            pathType: Prefix
